--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -11,6 +11,6 @@ spec:
   ports:
     - name: goserver-service
       port: 80
-      targetPort: 80
+      targetPort: 80 #porta do container
       protocol: TCP
       nodePort: 30001
